test/passing/comment_in_modules.ml
module M = struct
  (* comments *)
end

module M : sig
  (* comments *)
end = struct
  (* comments *)
end

module type M = sig
  (* comments *)
end

